# Open-Genbu-GC

./: CMakeLists.txt  TODO  arm_utils.h  board_io.c  board_io.h  debounce.c  debounce.h  descriptors.c  descriptors.h  dev_lowlevel.c  dev_lowlevel.h  io.h  main.c  pinmap.h  prio_queue.c  prio_queue.h  proc_queue.c  usb_common.h  usb_driver.c  usb_driver.h  usb_gamepad.c  utils.h
firmware/: STYLE.rst  descriptors.c  descriptors.h  main.c  usb_common.h  usb_gamepad.c  utils.h  ws2812.c  ws2812.h
